Bug 1031253 - Patch: Reject promise if StartStopGonkBluetooth failed. r=btian